# live

./: .gitignore  README.md  需求.md
.github/workflows/: build-windows.yml
app/: .metadata  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/live_clip_app/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  config.dart  danmaku_overlay.dart  main.dart  models.dart  user_center.dart  webrtc_player.dart
docs/: REFACTOR-SINGLE-BINARY.md  RTMP-桥与录制.md  STAGE2-PLAN.md
docs/legacy/: CLOUD.md  DESIGN.md  MULTI-TENANT.md  PLAN.md  README.md  STREAMER.md  TODO.md
relay/: Cargo.toml  README.md  build.rs  dev.sh  push-camera-whip.sh  push-test-whip.sh
relay/src/: banner.rs  bridge.rs  clip.rs  config.rs  ffmpeg.rs  logging.rs  main.rs  record.rs  rtp_ingest.rs  web.rs
relay/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
relay/web/src/: App.tsx  api.ts  styles.css  whep.ts
relay/web/src/pages/: Admin.tsx  Recordings.tsx  Viewer.tsx
